[profile.dev]
opt-level = 'z'        # Optimize for size.
lto = false            # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip debug info.
overflow-checks = true # Panic in the case of an overflow.

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.


[workspace]
members = [
    "data-structures",
    "maths",
    "test-engine"
]
resolver = "2"