[package]
name = "test-engine"
version = "0.2.0"
license = "MIT"
edition = "2021"

[dependencies]
radix-common = "1.2.0"
radix-engine = "1.2.0"
radix-engine-interface = "1.2.0"
radix-transactions = "1.2.0"
scrypto-test = "1.2.0"
radix-substate-store-impls = "1.2.0"
lazy_static = "1.4.0"
indexmap = "2.2.6"

[lib]
